modifaccion de fecha

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -188,8 +188,9 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Empleados <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
+					     <li><a href="#" th:href="@{/empleados/}">Consultar Puestos</a></li>
+						<li><a href="#" th:href="@{/empleado/crear/empleados}">Crear Empleado</a></li>
+						
 					</ul>
 				</li>
                                 
@@ -230,8 +231,25 @@
                                                 <li><a href="#" th:href="@{/otherreports/constanciaservicios/}">Constancia de Servicios</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/misionesinternas/}">Reporte de Misiones Internas</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/1misionesexternas/}">Reporte de Misiones externa1</a></li>
-                                                 <li><a href="#" th:href="@{/otherreports/2misionesexternas/}">Reporte de Misiones externa2</a></li>
-                                                    <li><a href="#" th:href="@{/otherreports/constanciasalariales/}">constancias salariales</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/2misionesexternas/}">Reporte de Misiones externa2</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/constanciasalariales/}">constancias salariales</a></li>
+                                                 <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
+                                                 <li><a href="#" th:href="@{/puestos/reporte/puesto}">Reporte Puestos a Caducar</a></li>
+                                                 <li><a href="#" th:href="@{/empleado/reporte/contrataciones}">Reporte Contrataciones</a></li>
+                                                 <li><a href="#" th:href="@{/empleado/reporte/despidos}">Reporte de Despidos</a></li>
+                                                 <li><a href="#" th:href="@{/empleado/reporte/estadisticoactivo}">Estadistico de Personal Activo</a></li>
+                                                 <li><a href="#" th:href="@{/capacitadores/report/}">Reporte Capacitador</a></li>
+                                                 <li><a href="#" th:href="@{/capacitaciones/reporte/}">Reporte de Capacitaciones</a></li>
+                                                 <li><a href="#" th:href="@{/capacitaciones/reporte/diagnostico}">Reporte de Temas de Diagnostico</a></li>
+                                                 <li><a href="#" th:href="@{/capacitaciones/reporte/capacitador}">Reporte de Capacitadores</a></li>
+                                                 <li><a href="#" th:href="@{/capacitaciones/reporte/personalcapacitado}">Estadistico de Personal Capacitado</a></li>
+                                                 <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
+                                                 <li><a href="#" th:href="@{/beneficios/report/}">Reporte de Beneficios</a></li>
+                                                 <li><a href="#" th:href="@{/otherreports/reporte/costocreporte}">Reporte de costos de Capacitacion</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/reporte/pdfplazaoreporte}">Reporte de Plazas Ocupadas</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/reporte/pensionadoreporte}">Reporte de Personal Pensionado</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/reporte/exoneradoreporte}">Reporte de Personal Exonerado de Marcacion</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/reporte/nivelesreporte}">Reporte de Niveles Escolares</a></li>
                                                 
                                                 
                                                   
