--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
@@ -14,79 +14,77 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Datos de comite</h3>
+            <h3 align="center">Consulta de Diagnosticos de Capacitacion</h3>
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo de Comite:</label>
+                            <label class="col-sm-5 control-label">codigo de Diagnostico de Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.codigodiagnosticocapacitacion}">codigo de Diagnostico</p></div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">DUI:</label>
+                            <label class="col-sm-5 control-label">Nombre de Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.dui}">DUI</p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">NIT:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.nit}">NIT</p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre de comite:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.nombrecomite}">Nombre de comite</p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">Sueldo Base:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.responsablecomite}">Responsable</p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">desripcioncomite:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.desripcioncomite}">desripcioncomite</p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">desripcioncomite:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.numeroacuerdocomite}">numeroacuerdocomite</p>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">miembromaximo:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.miembromaximo}">miembromaximo</p>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">fechadesdecomite:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.fechadesdecomite}">fechadesdecomite</p>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-7 control-label">Fecha hasta comite:</label>
-                            <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${comite.fechahastacomite}">Fecha hasta </p>
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.codigocapacitacion.nombrecapacitacion}">DUI</p>
                             </div>
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Empleado:</label>
-                            <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Fecha hasta </p>
+                            <label class="col-sm-5 control-label">Direccion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.direccion}">DUI</p>
                             </div>
                         </div>
+                        
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Necesidad de Capacitacion</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.necesidadcapacitacion}">Necesidad de Capacitacion</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Que Mes es mas oportuno:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.mescapacitacion}">Que Mes es mas oportuno</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Anio dejecucion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.anioejecucion}">Anio dejecucion</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Personal que recibira Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.personalrecibir}">Personal que recibira Capacitacion</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Resultado que desea Obtener</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.resultadoobtener}">Resultado que desea Obtener</p>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Nombre de quien Autoriza:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.nombreautorizadiagnosticocapacitacion}">Nombre de quien Autoriza</p>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Cargo de quien Autoriza:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.cargoautorizadiagnosticocapacitacion}">Cargo de quien Autoriza</p>
+                            </div>
+                        </div>
+
+                     
+                       
+                        
                         
                     </div> 
 
@@ -94,7 +92,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/diagnosticocapacitaciones/}">Regresar</a></button>
 
                     </div>
                 </div>
