--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -114,6 +114,16 @@
 					</ul>
 				</li>
                                 
+                                <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Diagnosticos de Capacitaciones<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+						<li><a href="#" th:href="@{/diagnosticocapacitaciones/}">Consultar diagnostico</a></li>
+                                                 <li><a href="#" th:href="@{/diagnosticocapacitaciones/new/diagnosticocapacitacion}">Crear Diagnostico</a></li>
+<!--                                                 <li><a href="#" th:href="@{/asistenciacapacitaciones/report/}">Asistencia Capacitaciones</a></li>-->
+					</ul>
+				</li>
+                                
+                                
                                  <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Evualucion Capacitacion<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
