--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -48,7 +48,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <td>
                         <a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-default">Mostrar</a>
                         <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-default">Edit</a>
-                        <a th:href="${'./delete/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-danger">Delete</a>
+                     <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a></td>
+                        <!--<a th:href="${'./delete/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-danger">Delete</a>-->
                     </td>
                 </tr>
             </table>
@@ -64,7 +65,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success"
        }).then(function() {
-                location.href = '../costocapacitaciones/';
+                location.href = '../asistenciacapacitaciones/';
        }); 
 }
     
@@ -99,7 +100,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../costocapacitaciones/';
+                location.href = '../../asistenciacapacitaciones/';
        }); 
 }
     
