--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -19,7 +19,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
      <div class="col-md-9">
         
           <div class="row text-center">
-                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
+                        <img src="../../static/image/cuadros.png" width="100" th:src="@{/image/cuadros.png}"/>
                     </div>
         <h3 align="center">Listado de Cuadro Directivos</h3>
     <div th:if="${not #lists.isEmpty(cuadrodirectivos)}">
