--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -14,7 +14,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </div>
 <div class="container">
     
-    
+         <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/formacion.png" width="200" th:src="@{/image/formacion.png}"/>
     
     <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
         <h3 align="center" >Lista de Niveles Escolares</h3>
