--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -19,7 +19,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
          <th:block th:include="../templates/menu"></th:block>
     </div> 
         <div class="col-md-8">
-            
+            <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/formacion.png" width="150" th:src="@{/image/formacion.png}"/>
+                    </div>
             <h3 align="center">Nuevo Nivel de Escolaridad</h3>
     <div>
         <form class="form-horizontal" th:object="${nivelescolaridad}" th:action="@{../nivelescolaridad}" method="post">
