--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -13,7 +13,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
     <div class="container">
-        
+         <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
         <div th:if="${not #lists.isEmpty(asistenciacapacitaciones)}">
             <h2>Todas las asistencias Capacitacion</h2>
             <table class="table table-striped">
