--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -18,6 +18,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
+             <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
             <h3 align="center">Crear Asistencias de Capacitacion</h3>
             <div>
                 <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
