--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -12,6 +12,7 @@ var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
+    
 <!--<div class="container">-->
 <div th:if="${not #lists.isEmpty(comites)}">
             <div class="row">
@@ -19,6 +20,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
                 <div class="col-md-9">
+                          <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
                     <h3 align="center">Listado de Comites</h3>
                     <table class="table table-striped">
                         <tr>
