--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -21,7 +21,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
          <th:block th:include="../templates/menu"></th:block>
     </div> 
         <div class="col-md-8">
-            
+             <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/costo.png" width="200" th:src="@{/image/costo.png}"/>
+    
           <h3 align="center"> Crear Costos de Capacitacion</h3>
     <div>
         <form class="form-horizontal" th:object="${costocapacitacion}" th:action="@{../costocapacitacion}" method="post">
