--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -19,6 +19,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
          <th:block th:include="../templates/menu"></th:block>
     </div> 
         <div class="col-md-8">
+                <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/cuadro.png" width="100" th:src="@{/image/cuadro.png}"/>
             <h3 align="center">Crear cuadro directivos</h3>
     <div>
         <form class="form-horizontal" th:object="${cuadrodirectivo}" th:action="@{../cuadrodirectivo}" method="post">
