--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -3,14 +3,18 @@
 
     <head lang="en">
 
-        <title>Crear Evaluacion de Capacitacion</title>
-      
+        <title>Crear Capacitacion</title>
+<!--         <th:block th:include="../templates/header"></th:block>-->
+        <link rel="stylesheet"
+	th:href="@{/css/bootstrap.min.css}" />
+<link rel="stylesheet"
+	th:href="@{/css/jquery-ui.min.css}" />
     <th:block th:include="../templates/header"></th:block>
+   
 </head>
-
 <body>
-
-<div class="contenedorizq"><label  >pnt_evca</label> 
+    
+     <div class="contenedorizq"><label  >pnt_ceca</label>  
     <label  class="der">
     <script >
 var f = new Date();
@@ -21,14 +25,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div> 
-                            
         <div class="col-md-8">
-            <h3 align="center">Crear Evaluacion  de Capacitacion</h3>
+            <h3 align="center">Crear Capacitacion</h3>
             <div>
- 
-                <form class="form-horizontal" th:object="${evaluacioncapacitacionform}" th:action="@{../evaluacioncapacitacion}" method="post">       
+                <form class="form-horizontal" th:object="${evaluacioncapacitacion}" th:action="@{../evaluacioncapacitacion}" method="post">
 
-                    <div class="col-md-6">
+   <div class="col-md-6">
 
 
 <div class="form-group">
@@ -36,7 +38,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="col-sm-7">
                     <select class="form-control" name="codigocapacitacion.codigocapacitacion">
                          <option value="">-- Seleccione la Capacitacion --</option>
-                                <option th:each="c:${evaluacioncapacitacionform.capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
+                                <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
                 </div>
             </div>
@@ -263,7 +265,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                 <input type="text" class="form-control" max="100" maxlength="100" required="true" name="comentario"/>
                             </div>
                         </div>
-                    </div>
+                    
 
                     <div class="col-md-12">
                         <div class="row" align="center">
@@ -271,9 +273,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <button type="submit" class="btn btn-default">Guardar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
                         </div>
+                         
                     </div>
-                </form>
-         
+                    
+                        </div> 
+            </form>
+                     </div> 
+
+              
             </div>
 
 
@@ -281,41 +288,43 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
     <div class="col-md-12">
         <th:block th:include="../templates/footer"></th:block>
-
+        
     </div>  
     <script th:inline="javascript">
-        $(document).ready(function () {
-        if ([[${msg}]] === 0){
-        swal({
-        title: "Exito!",
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
                 text: "Registro agregado correctamente",
                 type: "success",
                 icon: "success"
-        }).then(function() {
-        location.href = '../evaluacioncapacitaciones/';
-        });
-        }
-
-        if ([[${msg}]] === 1){
+       }).then(function() {
+                location.href = '../capacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
         swal({
-        title: "ERROR!",
+                title: "ERROR!",
                 text: "Ocurrio un error en el proceso",
                 type: "error",
                 icon: "error"
-        });
-        }
-        });
-    </script>    
+       });
+    }
+    });
+</script>    
     <script>
         $(document).ready(function () {
-        $('#horaevualuacioncapacitacion').datepicker({
-        dateFormat: 'yy-mm-dd'
-        });
-        $('#fechacapacitacionhasta').datepicker({
-        dateFormat: 'yy-mm-dd'
-        });
+            $('#fechacapacitaciondesde').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
+
+            $('#fechacapacitacionhasta').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
         });
     </script>
-</body>	
+    
 
+</body>	
 </html>
