--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -50,6 +50,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <input type="text" class="form-control" required="true" th:field="*{fechahastacomision}"/>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">acuerdo:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" required="true" th:field="*{fechahastacomision}"/>
+                    </div>
+                </div>
 
                 <div class="row">
                     <button type="submit" class="btn btn-default">Agregar</button>
