inicio y configuracion de subir archivo

--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -17,10 +17,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     <div class="container">
         <h2 align="center">Crear Comision</h2>
         <div>
-            <form class="form-horizontal" th:object="${comision}" th:action="@{../comision}" method="post">
-                <input type="hidden" th:field="*{codigocomision}"/>
-                <input type="hidden" th:field="*{nombrecomision}"/>
-                <!--            <div class="form-group">
+            <form class="form-horizontal" th:object="${comision}" th:action="@{../comision}" method="post" enctype="multipart/form-data">
+<!--                <input type="hidden" th:field="*{codigocomision}"/>
+                <input type="hidden" th:field="*{nombrecomision}"/>-->
+<!--                            <div class="form-group">
                                 <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
                                 <div class="col-sm-10">
                                     <input type="text" class="form-control" th:field="*{codigocomision}"/>
@@ -32,14 +32,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <input type="text" class="form-control" size="50" maxlength="50" required="true" th:field="*{nombrecomision}"/>
                     </div>
                 </div>
-                <!--            <div class="form-group">
-                                <label class="col-sm-2 control-label">Representa a:</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" th:field="*{descripcioncomision}"/>
-                                </div>
-                            </div>-->
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Desde:</label>
+                                <label class="col-sm-2 control-label">Numero de acuerdo comision:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" th:field="*{numeroacuerdocomision}"/>
+                                </div>
+                            </div>
+                <div class="form-group">
+<!--                <label class="col-sm-2 control-label">Fecha Desde:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" required="true" th:field="*{fechadesdecomision}"/>
                     </div>
@@ -49,11 +49,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="col-sm-10">
                         <input type="text" class="form-control" required="true" th:field="*{fechahastacomision}"/>
                     </div>
-                </div>
-                <div class="form-group">
+                </div>-->
+               <div class="form-group">
                     <label class="col-sm-2 control-label">acuerdo:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" required="true" th:field="*{fechahastacomision}"/>
+                        <input type="file" name="file" class="" required="true" th:field="*{docaprovacion}"/>
                     </div>
                 </div>
 
