--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -199,7 +199,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Empleados <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
 					     <li><a href="#" th:href="@{/empleados/}">Consultar Puestos</a></li>
-						<li><a href="#" th:href="@{/empleado/crear/empleados}">Crear Empleado</a></li>
+						<li><a href="#" th:href="@{/empleados/new/empleado}">Crear Empleado</a></li>
 						
 					</ul>
 				</li>
